--- a/src/ProjectoAlexa.Web/Views/Exame/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Exame/Index.cshtml
@@ -15,31 +15,53 @@
                         <h4 class="card-title">Lista de Exames</h4>
                     </div>
                     <div class="col-md-6">
-                        <select class="form-control">
+                        @*<select class="form-control">
                             <option>Selecione o ano...</option>
                             <option>2021</option>
                             <option>2020</option>
-                        </select>
+                        </select>*@
                     </div>
                 </div>
-                
+
                 <h6 class="card-subtitle"><hr /></h6>
                 <div class="table-responsive">
                     <table class="table user-table">
                         <thead>
                             <tr>
                                 <th class="border-top-0">#</th>
-                                <th class="border-top-0">Data de Inicio</th>
-                                <th class="border-top-0">Data de encerramento</th>
-                                <th class="border-top-0">Data de Exame</th>
-                                <th class="border-top-0">Data dos Resultados</th>
-                                <th class="border-top-0">Data de cadastro</th>
-                                <th class="border-top-0">Ações</th>
+                                <th class="border-top-0">IdCandidatura</th>
+                                <th class="border-top-0">IdQuestionário</th>
+                                <th class="border-top-0">Pontos</th>
+                                <th class="border-top-0">Resultado</th>
+                                <th class="border-top-0">Tempo de Conclusão</th>
+                                <th class="border-top-0">Data do Exame</th>
+
                             </tr>
                         </thead>
                         <tbody>
-                            
+                            @{int conta = 1;}
+                            @foreach (var exame in Model)
+                            {
 
+                            <tr>
+                                <td class="border-top-0">@(conta++)</td>
+                                <td class="border-top-0">@exame.CandidaturaId</td>
+                                <td class="border-top-0">@exame.QuestionarioId</td>
+                                <td class="border-top-0">@exame.Pontos</td>
+                                @if (exame.Resultado)
+                                {
+                                    <td class="border-top-0 text-success">Aprovado</td>
+                                }
+                                else
+                                {
+                                    <td class="border-top-0 text-danger">Reprovado</td>
+
+                                }
+
+                                <td class="border-top-0">@exame.TempoConclusao</td>
+                                <td class="border-top-0">@exame.DataCadastro</td>
+                            </tr>
+                            }
 
                         </tbody>
                     </table>
