--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutCandidato.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutCandidato.cshtml
@@ -9,6 +9,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/fontawesome-all.css" rel="stylesheet" />
+    @RenderSection("styles", required: false)
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
